--- a/phase1/app/src/main/AndroidManifest.xml
+++ b/phase1/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ourgame">
 
     <application
@@ -9,6 +10,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".ui.login.Login"
+            android:label="@string/title_activity_login"></activity>
+        <activity android:name=".TileGame" />
+        <activity android:name=".PictureGame" />
+        <activity android:name=".ReactionTime" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,5 +24,12 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="true" />
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
 
 </manifest>
