--- a/phase1/app/src/main/AndroidManifest.xml
+++ b/phase1/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GameOverActivity"></activity>
+        <activity android:name=".StatisticsActivity"></activity>
+        <activity android:name=".GameOverActivity" />
         <activity android:name=".PictureInstructions" />
         <activity android:name=".login.Login">
             <intent-filter>
@@ -53,7 +54,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".TileGameInstructions" />
 
         <meta-data
