--- a/phase1/app/src/main/AndroidManifest.xml
+++ b/phase1/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".RunningGame.EndlessRunnerActivity"></activity>
         <activity android:name=".StatisticsActivity" />
         <activity android:name=".GameOverActivity" />
         <activity android:name=".PictureInstructions" />
