--- a/phase1/app/src/main/AndroidManifest.xml
+++ b/phase1/app/src/main/AndroidManifest.xml
@@ -19,9 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".RunningGame.EndlessRunnerActivity"></activity>
-        <activity android:name=".StatisticsActivity" />
+        <activity android:name=".Statistics.StatisticsActivity" />
         <activity android:name=".GameOverActivity" />
-        <activity android:name=".PictureInstructions" />
+        <activity android:name=".PictureGame.PictureInstructions" />
         <activity android:name=".login.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TileGameActivity"
+            android:name=".TileGame.TileGameActivity"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -39,7 +39,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".PictureGameActivity"
+            android:name=".PictureGame.PictureGameActivity"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -48,7 +48,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".ReactionTime"
+            android:name=".ReactionGame.ReactionTime"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -57,7 +57,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".TileGameInstructions" />
+        <activity android:name=".TileGame.TileGameInstructions" />
 
         <meta-data
             android:name="preloaded_fonts"
