--- a/phase1/app/src/main/AndroidManifest.xml
+++ b/phase1/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".ReactionGame.ReactionTime"
+            android:name=".ReactionGame.ReactionGameActivity"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
