Separated front-end and back-end for the ReactionGame

--- a/phase2/app/src/main/AndroidManifest.xml
+++ b/phase2/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".Games.ReactionGame.ReactionTime"
+            android:name=".Games.ReactionGame.ReactionGameActivity"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
